--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>I'm <b>Abdulmuizz Abdulkareem</b>, a Computer Science student at Kwara State University with a growing passion for technology and web development. Currently exploring the fundamentals of frontend development, I'm building my skills in creating engaging and functional user interfaces. As someone at the beginning of my web development journey, I approach each project as an opportunity to learn, experiment, and grow. I'm particularly interested in crafting user-friendly applications and solving real-world problems through code. This portfolio showcases my progress as I continue to develop my technical skills and work toward becoming a proficient developer.</p>
        </div>
         </div> 
-          <img  class="profile-pic" src="abdul da dev.jpg" title="Abdulmuizz" width="300" height="300">
+          <img  class="profile-pic" src="profile.jpg" title="Abdulmuizz" width="300" height="300">
         
         <section>
             <h2 class="learning-section">Learning Resources</h2>
@@ -67,4 +67,5 @@
     </div>
 </footer>
 </body>
+
 </html>
